# rust_game_snake

./: Cargo.toml  README.md  index.html  snake.d.ts  snake.js  snake_bg.wasm.d.ts  wasm-build.cmd
.github/workflows/: main.yml
src/: constants.rs  game.rs  interaction.rs  main.rs  menu.rs  update.rs
src/data/: component.rs  mod.rs  states.rs
