[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "bevy/bevy_winit",
    "bevy/bevy_ui",
]

# add build parameters --features web
web = [
  "bevy/webgl2"
]

# this kind of dependency is an alternative
# [target.'cfg(target_arch="wasm32")'.dependencies]
# bevy = { version = "0.11.2", default-features = false, features = ["bevy_winit", "bevy_ui","webgl2"] }

[dependencies]
bevy = { version = "0.12.0", default-features = false}
# bevy-inspector-egui="0.19.0"
rand = "0.8.5"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = "thin"
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
panic = "abort"
codegen-units = 1


[profile.dev]
opt-level = 1
